
To prevent this, the swarm.batch script now hard-codes the path to the temporary directory, rather than relying on the symlink.

This change will also make it possible to rerun the swarm, because rerunning would not depend on the symlink.  However, rerunning is not without risk, as the
swarm rerun would need to complete before swarm_cleanup.pl removes the temporary directory and the symlink when the original job was finished more than 
7 days earlier.

--------

2016-04-19

Created parse_batch_logs.pl that will parse through the archived sbatch logfiles and create a Perl store file that associates the randomly generated string used for the 
temporary directories in /swarm with a jobid, or an aborted submission.  This store file is now used by swarm_cleanup.pl to speed up the search for jobids associated with
orphan directories that don't have a symlink.

Additionally, fixed a bug.  Swarms of a single job were being ignored by the parsing expression, and were not being deleted.

--------

2016-11-14

Added support for maximum simultaneously running subjobs (the module function for Slurm jobarrays).  --maxrunning will limit the number of running
subjobs within a swarm.

--------

2017-03-23

swarm now writes two index files, .tempdir.idx and .swarm.idx, to simplify the process of clean up and lay the foundation for rerunning swarms.

--------

2017-04-03

Removed swarmdel.

--------

2017-04-12

swarm_manager uses the index files created by swarm and the jobs table for the dashboard to keep track of swarms in a more comprehensive and systematic way than simply running find and sacct a lot.

--------

2020-01-24

swarm_cleanup.pl is now the script for cleaning.  Removed swarm_manager.

--------

2020-08-02

Began versioning (21.08.0)

--------

2020-12-22 (version 21.12.0) 

Added file directives and made adding options easier by creating a single options object.

Also, -f and --f are deprecated.  swarm now accepts 1 argument, the swarm file.

--------